Cherry-pick r250440. rdar://problem/55800893

OSR exit shouldn't bother updating get_by_id array profiles that have changed modes
    https://bugs.webkit.org/show_bug.cgi?id=202324
    <rdar://problem/52669110>

    Reviewed by Yusuke Suzuki.

    This is an optimization that avoids polluting the array profile.

    * dfg/DFGOSRExit.cpp:
    (JSC::DFG::OSRExit::executeOSRExit):
    (JSC::DFG::OSRExit::compileExit):

    Canonical link: https://commits.webkit.org/215868@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@250440 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/213666.417@safari-608-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-608-branch@250477 268f45cc-cd09-0410-ab3c-d52691b4dbfc